fixed hamburger alignment in cordova

--- a/public/ng/app/scss/modules/_platform.scss
+++ b/public/ng/app/scss/modules/_platform.scss
@@ -1,15 +1,8 @@
-// body {
-//   &.platform-ios {
-//     top: 60px;
-//   }
+.platform-cordova {
 
-//   &.platform-browser {
-//     top: 44px;
-//   }
-// }
+  .image-button.left {
+    top: 30px;
+    left: -5px;
+  }
 
-// .top-bar {
-//   background-color: $royal;
-//   height: 20px;
-//   top: -20px;
-// }
+}
