--- a/public/ng/app/scss/partials/_home.scss
+++ b/public/ng/app/scss/partials/_home.scss
@@ -14,13 +14,11 @@
     width:    50%;
   }
 
-  &.left {
-    top:  10px;
-    left: -5px;
+  &.left, &.right {
+    top: 10px;
   }
 
   &.right {
-    // top:  10px;
     top:  5px;
     left: -50px;
   }
